syntax = "proto3";

package SuaiTimeTable;

option csharp_namespace = "Suai.Bot.TimeTable.Proto";


service TimeTableProvider {
	rpc GetTimeTable(TimeTableRequest) returns (TimeTableReply);
}

message TimeTableRequest {
	string group = 1;
	string teacher = 2;
	string building = 3;
	string classRoom = 4;
	string university = 5;
}

// empty if nothing found
message TimeTableReply {
	repeated Lesson lessons = 1;
	WeekTypes actualWeekType = 2;
}

message Lesson {
	string group = 1;
	string teacher = 2;
	string building = 3;
	string classRoom = 4;
	WeekDays weekDay = 5;
	WeekTypes weekType = 6;
	string university = 7;
}

enum WeekDays {
	MONDAY = 0;
    TUESDAY = 1;
    WEDNESDAY = 2;
    THURSDAY = 3;
    FRIDAY = 4;
    SATURDAY = 5;
    SUNDAY = 6;
}

enum WeekTypes {
	UPPER = 0;
	LOWER = 1;
}